Replace the mockbean with mock