@@ -29,18 +29,28 @@ dependencies {
 	implementation("org.liquibase:liquibase-core")
 	implementation("org.postgresql:postgresql")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.mockito:mockito-core:5.12.0")
+	testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
+	testImplementation("net.bytebuddy:byte-buddy-agent:1.14.14")
+	testImplementation("org.assertj:assertj-core:3.25.3")
+	testImplementation("com.h2database:h2:2.2.224")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 	liquibaseRuntime("org.liquibase:liquibase-core")
 	liquibaseRuntime("org.postgresql:postgresql")
 	liquibaseRuntime("info.picocli:picocli:4.6.3")
 }
-
-tasks.withType<Test> {
-	useJUnitPlatform()
-}
-
+/*
 tasks.withType<Test> {
 	enabled = false
+}*/
+tasks.withType<Test> {
+	useJUnitPlatform()
+	jvmArgs = listOf(
+		"-XX:+EnableDynamicAgentLoading",
+		"--add-opens=java.base/java.lang=ALL-UNNAMED",
+		"-Djdk.instrument.traceUsage=false"
+	)
+	systemProperty("jdk.attach.allowAttachSelf", "true")
 }
 
 tasks.register("docker", Copy::class) {
